Add new spell templates for activation ring, column, and fire with variants